Currency and price alignment issue
Since the drawer width was set to 40rem, price was shown below the currency symbol on cart type drawer.

--- a/assets/component-cart-drawer.css
+++ b/assets/component-cart-drawer.css
@@ -17,7 +17,7 @@
 
 .drawer__inner {
   height: 100%;
-  width: 40rem;
+  width: 44rem;
   max-width: calc(100vw - 3rem);
   padding: 0 1.5rem;
   border: 0.1rem solid rgba(var(--color-foreground), 0.2);
